      of the last version in the previous_version_tableWidget.
    * **New:** Version Creator UI now uses a QSplitter for tasks_groupBox,
      new_version_groupBox and previous_versions_groupBox which allows sizing
      of the columns.
    * **New:** Version Creator UI now shows the dependent task list in a new
      column in tasks_treeWidget.
    * **Utils:**
      
      * **New:** Added a new class called **UIFile** to manage ui files.
      * **New:** UICompiler now checks the *.ui* files against their stored md5
        checksum values to prevent unnecessary compiles of unchanged files.

  * **Utils:**

    * **New:** utils.open_browser_in_location() now selects the file if a file
      path is given.

  * **Env:**

    * **Fix:** Houdini env is working now.
    * **Fix:** Nuke env is working now.
    * **New:** Maya env is now storing the parent version info upon save and
      updates inputs (references) of the current version properly.

0.1.0.a3
========

* **Pipeline:**

  * **UI:**

    * **Fix:** Reorganized and fixed the code that chooses between ``PySide``
      or ``PyQt4``. To choose one of the libraries, let say to choose
      ``PySide`` as the library in UI::

        # first import the code that sets the system to pyside
        from anima.pipeline.ui import SET_PYSIDE
        SET_PYSIDE()

        # then import QtCore and QtGui as follows
        from anima.pipeline.ui.lib import QtCore, QtGui

      The default library is PyQt4.
    * **Update:** **version_creator.fill_tasks_treeWidget()** now works much
      faster.
    * **Update:** **version_creator.previous_versions_tableWidget** now
      displays the icon of the created environment.

  * **Environments:**

    * **Maya:**

      * **Update:** Maya now uses the folder that the current version is saved
        as the project folder.
      * **Update:** Maya sets the fps and resolution even if it is not the
        first version in its series.

0.1.0.a2
========

* **Pipeline:**
